cleaned up comments/whitespace and fixed 100% height

--- a/image-rotator-gallery/style.css
+++ b/image-rotator-gallery/style.css
@@ -7,9 +7,10 @@
 div.leftmenu {
 	background:#f0f0f0;
 	clear:both;
-	position:relative;
+	position:absolute;
 	float:left;
 	width:100%;
+	height:100%;
 	display:block;
 }
 
@@ -27,19 +28,19 @@ div#main_image {
 	color:#fff;
 }
 div#main_image h2 {
-	font-size:2em;
+	font-size:1em;
 	font-weight:normal;
-	margin:0 0 5px;
+	margin:0;
 	padding:10px;
 }
 div#main_image p {
-	font-size:1.2em;
+	font-size:0.7em;
 	line-height:1.6em;
 	padding:10px;
 	margin:0;
 }
 div.block small {
-	font-size:0.9em;
+	font-size:0.8em;
 	padding:0 0 0 20px;
 	/*background:url('icon_calendar.gif') no-repeat 0 center;*/
 }
@@ -60,12 +61,14 @@ div#main_image .block {
 }
 div#main_image a.collapse {
 	/*background:url('btn_collapse.gif') no-repeat left top;*/
-	height:27px;
-	width:93px;
-	text-indent:-999em;
+	/*height:27px;*/
+	/*width:93px;*/
+	/*text-indent:-999em;*/
 	position:absolute;
-	top:-27px;
-	right:20px;
+	top:-20px;
+	right:10px;
+	color:#f0f0f0;
+	text-decoration:none;
 }
 div#main_image a.show {
 	background-position:left bottom;
